--- a/src/DynaMock.SourceGeneration/DynaMock.SourceGeneration.csproj
+++ b/src/DynaMock.SourceGeneration/DynaMock.SourceGeneration.csproj
@@ -13,8 +13,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.1" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4">
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -26,9 +26,6 @@
 
   <!-- This ensures the library will be packaged as a source generator when used as a NuGet package -->
   <ItemGroup>
-    <None Include="$(OutputPath)\$(AssemblyName).dll" 
-          Pack="true" 
-          PackagePath="analyzers\dotnet\cs\$(AssemblyName).dll" 
-          Visible="false" />
+    <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers\dotnet\cs\$(AssemblyName).dll" Visible="false" />
   </ItemGroup>
 </Project>
