--- a/src/DynaMock/DynaMock.csproj
+++ b/src/DynaMock/DynaMock.csproj
@@ -14,14 +14,14 @@
     
     <!-- Package Information -->
     <PackageId>DynaMock</PackageId>
-    <Version>0.1.0-alpha.2</Version>
-    <PackageVersion>0.1.0-alpha.2</PackageVersion>
+    <Version>1.0.0</Version>
+    <PackageVersion>1.0.0</PackageVersion>
     <Authors>Salie Jakoet</Authors>
     <Description>A source generator library for creating mockable wrappers around interfaces and abstract classes</Description>
     <PackageTags>mocking;testing;source-generator;integration-testing</PackageTags>
     <PackageProjectUrl>https://github.com/saliej/DynaMock.NET</PackageProjectUrl>
     <RepositoryUrl>https://github.com/saliej/DynaMock.NET</RepositoryUrl>
-    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     
     <!-- Source Generator Support -->
@@ -30,11 +30,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="bin\Debug\net9.0\\DynaMock.dll" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.10" />
   </ItemGroup>
 
   <ItemGroup>
@@ -42,10 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="../DynaMock.SourceGeneration/bin/$(Configuration)/netstandard2.0/DynaMock.SourceGeneration.dll" 
-          Pack="true" 
-          PackagePath="analyzers/dotnet/cs/DynaMock.SourceGeneration.dll" 
-          Visible="false" />
+    <None Include="../DynaMock.SourceGeneration/bin/$(Configuration)/netstandard2.0/DynaMock.SourceGeneration.dll" Pack="true" PackagePath="analyzers/dotnet/cs/DynaMock.SourceGeneration.dll" Visible="false" />
   </ItemGroup>
   
   <ItemGroup>
@@ -54,7 +47,6 @@
 
   <!-- Build the source generator before packing -->
   <Target Name="BuildSourceGenerator" BeforeTargets="Pack">
-    <MSBuild Projects="../DynaMock.SourceGeneration/DynaMock.SourceGeneration.csproj" 
-             Properties="Configuration=$(Configuration)" />
+    <MSBuild Projects="../DynaMock.SourceGeneration/DynaMock.SourceGeneration.csproj" Properties="Configuration=$(Configuration)" />
   </Target>
 </Project>
