--- a/src/DynaMock/DynaMock.csproj
+++ b/src/DynaMock/DynaMock.csproj
@@ -14,8 +14,8 @@
     
     <!-- Package Information -->
     <PackageId>DynaMock</PackageId>
-    <Version>1.0.0</Version>
-    <PackageVersion>1.0.0</PackageVersion>
+    <Version>1.0.1</Version>
+    <PackageVersion>1.0.1</PackageVersion>
     <Authors>Salie Jakoet</Authors>
     <Description>A source generator library for creating mockable wrappers around interfaces and abstract classes</Description>
     <PackageTags>mocking;testing;source-generator;integration-testing</PackageTags>
@@ -30,7 +30,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="bin\**" />
+    <Compile Remove="nupkg\**" />
+    <EmbeddedResource Remove="bin\**" />
+    <EmbeddedResource Remove="nupkg\**" />
+    <None Remove="bin\**" />
+    <None Remove="nupkg\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="bin\Debug\net9.0\\DynaMock.dll" />
   </ItemGroup>
 
   <ItemGroup>
