--- a/src/DynaMock.UnitTests/DynaMock.UnitTests.csproj
+++ b/src/DynaMock.UnitTests/DynaMock.UnitTests.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\DynaMock.UnitTests.Services\DynaMock.UnitTests.Services.csproj" />
     <ProjectReference Include="..\DynaMock.SourceGeneration\DynaMock.SourceGeneration.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\DynaMock\DynaMock.csproj" />
   </ItemGroup>
