--- a/DynaMock.UnitTests.Services/DynaMock.UnitTests.Services.csproj
+++ b/DynaMock.UnitTests.Services/DynaMock.UnitTests.Services.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\src\DynaMock\DynaMock.csproj" />
+  </ItemGroup>
+
 </Project>
